Adding Authentication with firebase

--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "pet-bros",
+  "name": "petbros",
   "version": "0.0.0",
   "repository": "<fill-your-repository-here>",
   "nativescript": {
-    "id": "com.domain.project",
-    "tns-ios": {
-      "version": "3.1.0"
-    },
+    "id": "com.sebawita.petbros",
     "tns-android": {
       "version": "3.1.1"
+    },
+    "tns-ios": {
+      "version": "3.1.0"
     }
   },
   "dependencies": {
@@ -24,6 +24,8 @@
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
     "nativescript-angular": "^4.2.0",
+    "nativescript-custom-entitlements": "^0.2.0",
+    "nativescript-plugin-firebase": "^4.0.5",
     "nativescript-theme-core": "~1.0.2",
     "petfinder-angular-service": "~0.4.1",
     "reflect-metadata": "~0.1.8",
