--- a/nativescript/App_Resources/Android/app.gradle
+++ b/nativescript/App_Resources/Android/app.gradle
@@ -8,6 +8,7 @@
 android {  
   defaultConfig {  
     generatedDensities = []
+    multiDexEnabled true
     applicationId = "__PACKAGE__"  
   }  
   aaptOptions {  
