--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/router": "^4.2.0",
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
+    "angularfire2": "^4.0.0-rc.2",
     "core-js": "^2.4.1",
+    "firebase": "^4.3.0",
     "rxjs": "^5.4.3",
     "zone.js": "^0.8.5"
   },
@@ -43,6 +45,7 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "petfinder-angular-service": "^0.4.1",
+    "promise-polyfill": "~6.0.2",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
