--- a/nativescript/App_Resources/Android/app.gradle
+++ b/nativescript/App_Resources/Android/app.gradle
@@ -9,7 +9,7 @@ android {
   defaultConfig {  
     generatedDensities = []
     multiDexEnabled true
-    applicationId = "__PACKAGE__"  
+    applicationId = "com.sebawita.petbros"  
   }  
   aaptOptions {  
     additionalParameters "--no-version-vectors"  
