--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -25,9 +25,9 @@
     "@ngx-translate/http-loader": "0.0.3",
     "nativescript-angular": "^4.2.0",
     "nativescript-custom-entitlements": "^0.2.0",
-    "nativescript-plugin-firebase": "^4.0.5",
+    "nativescript-plugin-firebase": "4.0.5",
     "nativescript-theme-core": "~1.0.2",
-    "petfinder-angular-service": "~0.4.4",
+    "petfinder-angular-service": "^0.4.5",
     "reflect-metadata": "~0.1.8",
     "rxjs": "~5.4.3",
     "tns-core-modules": "^3.0.0",
