--- a/nativescript/package.json
+++ b/nativescript/package.json
@@ -5,10 +5,10 @@
   "nativescript": {
     "id": "com.sebawita.petbros",
     "tns-android": {
-      "version": "3.1.1"
+      "version": "3.2.0"
     },
     "tns-ios": {
-      "version": "3.1.0"
+      "version": "3.2.0"
     }
   },
   "dependencies": {
@@ -26,11 +26,12 @@
     "nativescript-angular": "^4.2.0",
     "nativescript-custom-entitlements": "^0.2.0",
     "nativescript-plugin-firebase": "4.0.5",
+    "nativescript-telerik-ui-pro": "^3.1.1",
     "nativescript-theme-core": "~1.0.2",
     "petfinder-angular-service": "^0.4.5",
     "reflect-metadata": "~0.1.8",
     "rxjs": "~5.4.3",
-    "tns-core-modules": "^3.0.0",
+    "tns-core-modules": "3.2.0",
     "typescript": "~2.4.2",
     "zone.js": "~0.8.2"
   },
